--- a/cdap-ui/pom.xml
+++ b/cdap-ui/pom.xml
@@ -123,6 +123,7 @@
                   <exclude>**/npm-debug.log</exclude>
                   <exclude>**/node/**</exclude>
                   <exclude>**/*.json</exclude>
+                  <exclude>**/LICENSE-node</exclude>
                 </excludes>
               </configuration>
             </execution>
@@ -152,7 +153,7 @@
                 </goals>
                 <configuration>
                   <nodeVersion>v0.12.0</nodeVersion>
-                  <npmVersion>2.5.1</npmVersion>
+                  <npmVersion>2.15.1</npmVersion>
                 </configuration>
               </execution>
               <execution>
@@ -272,11 +273,21 @@
                     <copy todir = "${stage.opt.dir}/dist">
                       <fileset dir = "dist"/>
                     </copy>
+                    <copy todir = "${stage.opt.dir}/bin">
+                      <fileset dir = "node">
+                        <include name="node" />
+                      </fileset>
+                    </copy>
                     <copy todir = "${stage.opt.dir}/node_modules">
                       <fileset dir = "node_modules"/>
                     </copy>
                     <copy todir = "${stage.opt.dir}/templates">
                       <fileset dir = "templates"/>
+                    </copy>
+                    <copy todir = "${stage.opt.dir}">
+                      <fileset dir = "./">
+                        <include name="LICENSE-node" />
+                      </fileset>
                     </copy>
                     <copy todir = "${stage.opt.dir}/">
                       <fileset dir = "./">
